feat(api): add endpoint to upload or replace article Markdown file; refactor article-endpoints to support embedding related data
