# src/routers/article-controller.ts
@@ -1,11 +1,12 @@
 import { type UUID, randomUUID } from 'crypto';
-import fs from 'fs';
+import fs from 'fs/promises';
 import path from 'path';
 import { type Request, Router } from 'express';
+import { type HydratedDocument } from 'mongoose';
 import { env } from '@/config.ts';
-import { type Article, ZArticleSchema } from '@models/article-schema.ts';
+import { type Article, type PopulatedArticle, ZArticleSchema } from '@models/article-schema.ts';
 import { models } from '@models/index.ts';
-import { type ArticleSearchQueryParam, ZArticleSearchQueryParam, ZUuidSchema } from '@models/util-schema.ts';
+import { type ArticleEmbedQueryParam, type ArticleSearchQueryParam, ZArticleEmbedQueryParam, ZArticleSearchQueryParam, ZUuidSchema } from '@models/util-schema.ts';
 import logger from '@utils/logger.ts';
 import { fileUploader, paginationParser } from './middleware.ts';
 
@@ -13,20 +14,53 @@ const router = Router();
 
 const ArticleModel = models.Article;
 
+const getArticleContent = async (articleId: UUID, sliceLength = 50): Promise<string | null> => {
+  const filePath = path.join(env.PWD, env.ARTICLE_FILE_DIR, `${articleId}.md`);
+  try {
+    const data = await fs.readFile(filePath, 'utf-8');
+    return data.slice(0, sliceLength);
+  } catch (err) {
+    logger.error(`File not found for article ${articleId}: ${filePath}`, err);
+    return null;
+  }
+};
+
 router.get('/', paginationParser, async (req, res) => {
   // eslint-disable-next-line @typescript-eslint/no-non-null-assertion -- paginationParser() checked
   const [offset, limit] = [req.offset!, req.limit!];
-  let param: ArticleSearchQueryParam;
+  let searchParam: ArticleSearchQueryParam;
+  let embedParam: ArticleEmbedQueryParam;
   try {
-    param = ZArticleSearchQueryParam.parse(req.query);
+    searchParam = ZArticleSearchQueryParam.parse(req.query);
+    embedParam = ZArticleEmbedQueryParam.parse(req.query);
   } catch (err) {
-    logger.warn('Failed to parse query in GET /articles/search: ', err);
+    logger.warn('Failed to parse query parameters in GET /articles/search: ', err);
     res.sendStatus(400);
     return;
   }
 
-  const [articles, totalCount] = await ArticleModel.searchArticles(param, offset, limit);
-  res.json({ articles, meta: { total: totalCount, offset, limit } });
+  let articleDocs: HydratedDocument<Article | PopulatedArticle>[] = await ArticleModel.searchArticles(searchParam);
+
+  const total = articleDocs.length;
+  articleDocs = articleDocs.slice(offset, offset + limit);
+
+  if (!embedParam.embed?.includes('course')) {
+    articleDocs = articleDocs.map(article => article.depopulate('course'));
+  }
+  if (!embedParam.embed?.includes('creator')) {
+    articleDocs = articleDocs.map(article => article.depopulate('creator'));
+  }
+
+  const articles = await Promise.all(articleDocs.map(async (articleDoc) => {
+    const article = articleDoc.toObject<Article>();
+
+    if (!embedParam.embed?.includes('content')) return article;
+
+    const content = await getArticleContent(articleDoc._id);
+    return { ...article, content };
+  }));
+
+  res.json({ articles, meta: { total, offset, limit } });
 });
 
 router.post('/', async (req, res) => {
@@ -48,19 +82,38 @@ router.post('/', async (req, res) => {
 
 router.get('/:articleId', async (req, res) => {
   let articleId: UUID;
+  let embedParam: ArticleEmbedQueryParam;
   try {
     articleId = ZUuidSchema.parse(req.params.articleId);
+    embedParam = ZArticleEmbedQueryParam.parse(req.query);
   } catch (err) {
-    logger.warn('Failed to parse articleId in GET /articles/:articleId: ', err);
+    logger.warn('Failed to parse path parameter or query parameters in GET /articles/:articleId: ', err);
     res.sendStatus(400);
     return;
   }
 
-  const article = await ArticleModel.findById(articleId).lean({ versionKey: false }).exec();
+  let query = ArticleModel.findById(articleId);
+  if (embedParam.embed?.includes('course')) {
+    query = query.populate('course');
+  }
+  if (embedParam.embed?.includes('creator')) {
+    query = query.populate('creator');
+  }
+  const article = await query.lean({ versionKey: false }).exec();
   if (article === null) {
     res.sendStatus(404);
-  } else {
+    return;
+  }
+
+  if (!embedParam.embed?.includes('content')) {
     res.json({ article });
+  } else {
+    const content = await getArticleContent(articleId);
+    if (content === null) {
+      res.sendStatus(500);
+      return;
+    }
+    res.json({ article: { ...article, content } });
   }
 });
 
@@ -87,7 +140,6 @@ router.patch('/:articleId', async (req, res) => {
   }
 });
 
-// Add file retrieval endpoint
 router.get('/:uuid/file', async (req, res) => {
   let articleId: UUID;
   try {
@@ -99,23 +151,20 @@ router.get('/:uuid/file', async (req, res) => {
   }
 
   const article = await ArticleModel.findById(articleId).lean().exec();
-  // If uuid is not found
   if (article === null) {
     res.sendStatus(404);
-  } else {
-    const fileName = `${articleId}.md`;
-    const options = {
-      root: path.join(env.PWD, env.ARTICLE_FILE_DIR),
-    };
-
-    // If the uuid exists but the file does not exist
-    if (!fs.existsSync(path.join(options.root, fileName))) {
-      res.sendStatus(500);
-      return;
-    }
-
-    res.sendFile(fileName, options);
+    return;
   }
+  const fileName = `${articleId}.md`;
+  const filePath = path.join(env.PWD, env.ARTICLE_FILE_DIR, fileName);
+  try {
+    await fs.access(filePath);
+  } catch (err) {
+    logger.error(`File not found for article ${articleId}: ${filePath}`, err);
+    res.sendStatus(500);
+    return;
+  }
+  res.sendFile(filePath);
 });
 
 // Use the file uploader middleware for articles (MD only)
